--- a/video_looper.ini
+++ b/video_looper.ini
@@ -20,8 +20,8 @@ video_player = omxplayer
 # directory option will search only a specified directory on the SD card for
 # movie files.  Note that you change the directory by modifying the setting in
 # the [directory] section below.  The default is usb_drive.
-file_reader = usb_drive
-#file_reader = directory
+#file_reader = usb_drive
+file_reader = directory
 
 # The rest of the configuration for video looper below is optional and can be 
 # ignored.
@@ -54,7 +54,7 @@ console_output = true
 [directory]
 
 # The path to search for movies when using the directory file reader.
-path = /home/pi
+path = /home/pi/Video_W0
 
 # USB drive file reader configuration follows.
 [usb_drive]
@@ -93,7 +93,7 @@ sound_vol_file = sound_volume
 # Any extra command line arguments to pass to omxplayer.  It is not recommended
 # that you change this unless you have a specific need to do so!  The audio and
 # video FIFO buffers are kept low to reduce clipping ends of movie at loop.
-extra_args = --no-osd --audio_fifo 0.01 --video_fifo 0.01
+extra_args = --no-osd --vol -10000 --audio_fifo 0.01 --video_fifo 0.01
 
 # hello_video player configuration follows.
 [hello_video]
