--- a/video_looper.ini
+++ b/video_looper.ini
@@ -54,7 +54,12 @@ console_output = true
 [directory]
 
 # The path to search for movies when using the directory file reader.
-path = /home/pi/Video_W0
+path0 = /home/pi/Video_W0
+path1 = /home/pi/Video_W1
+path2 = /home/pi/Video_W2
+path3 = /home/pi/Video_W3
+path4 = /home/pi/Video_W4
+path5 = /home/pi/Video_W5
 
 # USB drive file reader configuration follows.
 [usb_drive]
